# rust_notes

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yaml
src/: lib.rs  main.rs  notes.rs  persistency.rs
tests/: integration_test.rs  persistency_test.rs
