[package]
name = "notes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.7", features = ["tower-log", "tracing"] }
hyper = { version = "1.8.1", features = ["full"]}
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
nanoid = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
mongodb = { version = "3.4.1" }
bson = "2"

async-trait = "0.1"
testcontainers = "0.15"
futures = "0.3.31"
